--- a/src/module/contact/Contact.css
+++ b/src/module/contact/Contact.css
@@ -12,10 +12,11 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 8rem;
+  padding: 20%;
+  overflow: hidden;
 }
 .search-container {
-  /* width: 45rem; */
+  width: 100%;
   margin-top: 3rem;
   height: 4.5rem;
   display: flex;
@@ -25,7 +26,7 @@
   border-radius: 100px;
 }
 .search-text {
-  /* width: 35rem; */
+  width: 70%;
   border: none;
   font-weight: bold;
   font-size: 15px;
@@ -35,8 +36,8 @@
   background-color: black;
   color: white;
   margin: 3px;
-  padding: 15px;
-  width: 9rem;
+  padding: 4%;
+  width: 40%;
   text-align: center;
   border-radius: 50px;
   font-size: 22px;
@@ -45,6 +46,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  margin: auto;
 }
 .feature1 {
   background-color: white;
@@ -56,6 +58,7 @@
   flex-direction: column;
   align-items: center;
   /* justify-content: center; */
+  text-align: center;
 }
 .features-text1 {
   margin: 5px;
@@ -76,7 +79,7 @@
   font-weight: bolder;
   height: 2.5rem;
   border-radius: 40px;
-  width: 12rem;
+  width: 25vw;
   display: flex;
   align-items: center;
   justify-content: space-evenly;
@@ -94,11 +97,9 @@
 }
 
 .help-item {
-  flex: 1 1 calc(25% - 10px); /* Each item takes up 33.33% of the container's width */
+  flex: 1 1 calc(25% - 10px);
   margin: 10px 18px;
-  height: 100px;
-  background-color: #f2f2f2; /* Example background color */
-  padding-top: 40px;
+  background-color: #f2f2f2;
   padding-left: 50px;
   text-align: left;
   height: 220px;
@@ -155,5 +156,21 @@
     display: block;
     flex-direction: column;
     align-items: center;
+  }
+}
+@media only screen and (max-width: 650px) {
+  .main-features {
+    display: block;
+    flex-direction: column;
+    align-items: center;
+    margin: auto;
+    overflow-x: hidden;
+  }
+
+  .features-text-btn {
+    height: 40px;
+  }
+  .feature1 {
+    border: 1px solid rgb(44, 39, 39);
   }
 }
